// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProgressIndicator Snapshot Testing should match snapshot with basic props 1`] = `
<View
  className="flex-row justify-center items-center gap-2 "
  testID="progress-indicator-container"
>
  <View
    accessibilityLabel="Step 1 of 3 (completed)"
    className="w-2 h-2 rounded-full bg-muted-foreground/30"
    testID="progress-step-0"
  />
  <View
    accessibilityLabel="Step 2 of 3 (current)"
    className="w-2 h-2 rounded-full bg-primary"
    testID="progress-step-1"
  />
  <View
    accessibilityLabel="Step 3 of 3 (pending)"
    className="w-2 h-2 rounded-full bg-muted-foreground/30"
    testID="progress-step-2"
  />
</View>
`;

exports[`ProgressIndicator Snapshot Testing should match snapshot with custom className 1`] = `
<View
  className="flex-row justify-center items-center gap-2 p-4 bg-gray-100"
  testID="progress-indicator-container"
>
  <View
    accessibilityLabel="Step 1 of 5 (completed)"
    className="w-2 h-2 rounded-full bg-muted-foreground/30"
    testID="progress-step-0"
  />
  <View
    accessibilityLabel="Step 2 of 5 (completed)"
    className="w-2 h-2 rounded-full bg-muted-foreground/30"
    testID="progress-step-1"
  />
  <View
    accessibilityLabel="Step 3 of 5 (current)"
    className="w-2 h-2 rounded-full bg-primary"
    testID="progress-step-2"
  />
  <View
    accessibilityLabel="Step 4 of 5 (pending)"
    className="w-2 h-2 rounded-full bg-muted-foreground/30"
    testID="progress-step-3"
  />
  <View
    accessibilityLabel="Step 5 of 5 (pending)"
    className="w-2 h-2 rounded-full bg-muted-foreground/30"
    testID="progress-step-4"
  />
</View>
`;

exports[`ProgressIndicator Snapshot Testing should match snapshot with edge cases 1`] = `
<View
  className="flex-row justify-center items-center gap-2 "
  testID="progress-indicator-container"
>
  <View
    accessibilityLabel="Step 1 of 1 (current)"
    className="w-2 h-2 rounded-full bg-primary"
    testID="progress-step-0"
  />
</View>
`;
